# ha-a2a

./: .gitignore  .rsync-exclude  AGENTS.md  HA_DEPLOY.md  Makefile  pyproject.toml
custom_components/ha_a2a/: __init__.py  assistant_registry.py  config_flow.py  const.py  conversation_bridge.py  http.py  manifest.json  models.py  sdk_runtime.py  store.py  strings.json
scripts/: ha_rsync.sh
skill/a2a-protocol/: SKILL.md
tests/components/ha_a2a/: conftest.py  test_assistant_registry.py  test_capability_gating.py  test_config_flow.py  test_conversation_bridge.py  test_http.py  test_http_endpoints.py  test_models.py  test_sdk_runtime.py  test_store.py  test_streaming.py  test_tasks_list.py
